kubernetes/apps/flux-system/flux-instance/app/ingressroute.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: traefik
  rules:
    - host: "flux-webhook.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: zurg
#   namespace: zurg
#   annotations:
#     external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
#     external-dns.alpha.kubernetes.io/target: "480p.com"
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`zurg.480p.com`)
#       kind: Rule
#       services:
#         - name: zurg
#           port: 9999 # Default zurg port
#   tls:
#     secretName: 480p-com-tls
